--- a/_posts/2020-06-10-Hello-2020.md
+++ b/_posts/2020-06-10-Hello-2020.md
@@ -4,7 +4,7 @@ title:      Hello 2020致2020的第一封信
 subtitle:   Markdown References
 date:       2020-06-10
 author:     Elon
-header-img: img/post-bg-cook.jpg
+header-img: img/post-bg-coffee.jpg
 catalog: true
 tags:
     - editor, python, markdown
