--- a/_posts/2020-06-10-Hello-2020.md
+++ b/_posts/2020-06-10-Hello-2020.md
@@ -7,7 +7,9 @@ author:     Elon
 header-img: img/post-bg-coffee.jpg
 catalog: true
 tags:
-    - editor, python, markdown
+    - editor
+    - python
+    - markdown
 ---
 
 ## This is to notedown my start of Oarpark community.
