--- a/_posts/2020-06-10-Hello-2020.md
+++ b/_posts/2020-06-10-Hello-2020.md
@@ -15,9 +15,8 @@ tags:
 ## This is to notedown my start of Oarpark community.
 
 ### 致未来的你的公开信
-Hello, community members:
->I really appreciate BY-qiubaiying who wrote such a wonderful blog creation [guide](https://github.com/qiubaiying/qiubaiying.github.io/wiki/%E5%8D%9A%E5%AE%A2%E6%90%AD%E5%BB%BA%E8%AF%A6%E7%BB%86%E6%95%99%E7%A8%8B). As for me, this is a great place to note down what I have in my mind and what I want to say to the future ones, my family and myself. 
- 
+>Hello, community members:
+I really appreciate BY-qiubaiying who wrote such a wonderful blog creation [guide](https://github.com/qiubaiying/qiubaiying.github.io/wiki/%E5%8D%9A%E5%AE%A2%E6%90%AD%E5%BB%BA%E8%AF%A6%E7%BB%86%E6%95%99%E7%A8%8B). As for me, this is a great place to note down what I have in my mind and what I want to say to the future ones, my family and myself. 
 This domain gives me a quite place to settle down my spirit in my sparing time. It mainly serves for special moments, technical supports and spiritual journey.
 
 
