Aug-2020 v2 and Test html tags in writing blogs

--- a/_posts/2020-08-29-React 101 - W3.md
+++ b/_posts/2020-08-29-React 101 - W3.md
@@ -12,21 +12,20 @@ tags:
 ---
 ## React Intro
 <strong>React</strong> is a JavaScript library for building UI. It could build single page applications.
-	- Practice 1:
-	<pre> 
-		<code>
-			import React from 'react';
-			import ReactDOM from 'react-dom';
-			class Test extends React.Component {
-				render(){
-					return <h1>Bonjour!</h1>;
-				}
+- Practice 1:
+	<q>
+		import React from 'react';
+		import ReactDOM from 'react-dom';
+		class Test extends React.Component {
+			render(){
+				return <h1>Bonjour!</h1>;
 			}
-			ReactDOM.render(<Test />, document.getElementById('root'));
-		</code>
-	</pre>
-	- Practice 2: Create React App and Run it
-	You can use command npx if you have already installed npm and Node.js on your PC. THe command would look like npx create-react-app my-project-app. Then it will auto set up everything for you. In the CLT, go to the my-project-app and run <q>npm start</q> you will be directed to localhost:3000 if everything is set up correctly.
+		}
+		ReactDOM.render(<Test />, document.getElementById('root'));
+	</q>
+- Practice 2: Create React App and Run it
+	You can use command npx if you have already installed npm and Node.js on your PC. THe command would look like npx create-react-app my-project-app. Then it will auto set up everything for you. In the CLT, go to the my-project-app and run "npm start" you will be directed to localhost:3000 if everything is set up correctly.
+
 ## React ES6
 
 ## React Render HTML
