--- a/_posts/2020-08-29-React 101 - W3.md
+++ b/_posts/2020-08-29-React 101 - W3.md
@@ -10,20 +10,22 @@ tags:
     - React
     - JavaScript
 ---
+<strong>Note</strong>:In Markdown, you can use empty row + tab space to make a code block. Markdown would auto wrap tab leading lines within &lt;pre&gt;&lt;code&gt;.<br/>
 ## React Intro
 <strong>React</strong> is a JavaScript library for building UI. It could build single page applications.
-- Practice 1:
-	<q>
-		import React from 'react';
-		import ReactDOM from 'react-dom';
-		class Test extends React.Component {
-			render(){
-				return <h1>Bonjour!</h1>;
-			}
+
+Practice 1: A sample code in React looks like:
+
+	import React from 'react';
+	import ReactDOM from 'react-dom';
+	class Test extends React.Component {
+		render(){
+			return <h1>Bonjour!</h1>;
 		}
-		ReactDOM.render(<Test />, document.getElementById('root'));
-	</q>
-- Practice 2: Create React App and Run it
+	}
+	ReactDOM.render(<Test />, document.getElementById('root'));
+
+Practice 2: Create React App and Run it
 	You can use command npx if you have already installed npm and Node.js on your PC. THe command would look like npx create-react-app my-project-app. Then it will auto set up everything for you. In the CLT, go to the my-project-app and run "npm start" you will be directed to localhost:3000 if everything is set up correctly.
 
 ## React ES6
